fix buscket icon hover on mobile and refactor

--- a/src/blocks/burger-btn.scss
+++ b/src/blocks/burger-btn.scss
@@ -47,7 +47,7 @@
   opacity: 0;
 }
 
-.burger-checkbox:checked ~ .nav_mobile {
+.burger-checkbox:checked ~ .nav {
   visibility: visible;
   opacity: 1;
 }
