--- a/src/blocks/nav.scss
+++ b/src/blocks/nav.scss
@@ -3,7 +3,7 @@
   font-weight: 700;
   line-height: 1.2; // 21.6 px
 
-  &__links {
+  &__list {
     display: flex;
     column-gap: 58px;
     align-items: center;
@@ -45,7 +45,7 @@
 }
 
 @media screen and (width = 768px) {
-  .nav__links {
+  .nav__list {
     column-gap: 52px;
     padding: 0 13px 0 0;
   }
@@ -53,10 +53,6 @@
 
 @media screen and (width < 768px) {
   .nav {
-    display: none;
-  }
-
-  .nav_mobile {
     position: absolute;
     top: 100%;
     left: 0;
@@ -74,7 +70,7 @@
       visibility 0.3s ease;
   }
 
-  .nav__links_mobile {
+  .nav__list {
     align-items: center;
     justify-content: center;
     padding: 30px;
